--- a/index.html
+++ b/index.html
@@ -441,7 +441,11 @@ function processExercises(lines, outputDiv, loadingOverlay, generateBtn) {
     }
 }
 </script>
-
+<div style="text-align: center; margin-top: 30px; padding: 15px; color: #666; font-size: 14px; border-top: 1px solid #ddd;">
+    Original author - Roman Kharchenko<br>
+    Modifier - Oleksii Nechyporenko
+</div>
 </body>
 </html>
+
 
