Update index.html (fancy ver 3)

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     color: white;
     text-transform: uppercase;
     letter-spacing: 2px;
-    background: transparent;
+    background: #011c29;
     border: none;
     border-radius: 50px;
     cursor: pointer;
