--- a/index.html
+++ b/index.html
@@ -52,8 +52,33 @@
     border: 1px solid #1f1f1f;
     resize: vertical;
     background-color: #272727;
-    color: #C8C3BC 
+    color: #C8C3BC;
   }
+
+  /* ===== scrollbar for textarea ===== */
+textarea {
+  scrollbar-width: thin;        /* Firefox */
+  scrollbar-color: #555 #1f1f1f;
+}
+
+/* Chrome, Edge, Safari */
+textarea::-webkit-scrollbar {
+  width: 6px;
+}
+
+textarea::-webkit-scrollbar-track {
+  background: #1f1f1f;
+  border-radius: 10px;
+}
+
+textarea::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.35);
+  border-radius: 10px;
+}
+
+textarea::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(255, 255, 255, 0.55);
+}
 
   .rainbow-btn {
     position: relative;
