Update index.html (pre final ver 4)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <path d='M30 60 Q50 80 70 60' stroke='black' stroke-width='5' fill='transparent'/>
   </svg>">
 
-<title>Workout GIF Generator</title>
+<title>WGG</title>
 <style>
   html {
     background-color: #181A1B;
@@ -956,3 +956,4 @@ Special thanks to Lesia Movchan
 </div>
 </body>
 </html>
+
